--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-		     			TYS	是猪			
+		     希望你所有的不幸 都可以在本站的声声鞭炮中结束	---爱喝养乐多			
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="mobile-web-app-capable" content="yes">
